--- a/ReadMe.html
+++ b/ReadMe.html
@@ -21,8 +21,11 @@
 <p>账号：admin
 密码：123456</p>
 <h4>数据库</h4>
-<p>根据实际情况配置数据地址及用户名密码<br>
-/src/DB.properties 为数据配置文件</p>
+<p>数据库脚本位置：/数据库/student_db.sql<br>
+请自行创建数据库 student_db<br>
+1. 管理员信息表 t_admin<br>
+2. 学生成绩信息表 t_score<br>
+3. 学生信息表 t_student</p>
 <h1></h1>
 <h4>文件说明</h4>
 <h5>/src/com/stu/core 相关帮助类包</h5>
@@ -31,7 +34,7 @@
 <h5>/src/com/stu/model 数据Bean包</h5>
 <h5>/src/com/stu/service  数据服务接口包</h5>
 <h5>/src/com/stu/servlet  Servlet包</h5>
-<h5>/src/DB.properties 为数据配置文件</h5>
+<h5>/src/DB.properties 为数据配置文件 ,根据实际情况配置数据地址及用户名密码</h5>
 <h5>/WebRoot/bootstrap Bootstrap目前最受欢迎的前端框架</h5>
 <h5>/WebRoot/css 公共样式文件夹</h5>
 <h5>/WebRoot/script javascript脚本、jquery插件文件夹</h5>
